# ImageGame

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: gcc-toolchain.cmake
doc/: RepositoryStructure.plantuml  RequiredTools.plantuml
src/: CMakeLists.txt
src/ImageGame/: CMakeLists.txt  Gui.cpp  Gui.hpp  GuiBase.cpp  GuiBase.hpp  ImageGame.cpp
src/ImageGameLib/: CMakeLists.txt  ImageGameLib.cpp  ImageGameLib.hpp
test/: CMakeLists.txt  ImageGameTest.cpp
